In xcluster:   * Change DEB_AUTO_UPDATE_AUTOCONF to 2.50, not 1.   * Remove DEB_AUTO_UPDATE_DEBIAN_CONTROL.   * Change "Debian-Athena Project" to "Debathena Project".   * Remove debian/control from version control.   * Clean up debian/copyright.

--- a/debian/control.in
+++ b/debian/control.in
@@ -1,7 +1,7 @@
 Source: debathena-xcluster
 Section: debathena/net
 Priority: extra
-Maintainer: Debian-Athena Project <debathena@mit.edu>
+Maintainer: Debathena Project <debathena@mit.edu>
 Build-Depends: @cdbs@, libhesiod-dev, debathena-libxj-dev, libx11-dev, libxmu-dev
 Standards-Version: 3.7.2
 
