--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,14 @@ Source: debathena-xcluster
 Section: debathena/net
 Priority: extra
 Maintainer: Debathena Project <debathena@mit.edu>
-Build-Depends: debhelper (>= 7.0.50~), dh-autoreconf, debathena-aclocal, libhesiod-dev, debathena-libxj-dev, libx11-dev, libxmu-dev
+Build-Depends: debhelper (>= 7.0.50~)
 Standards-Version: 3.9.3
 
 Package: debathena-xcluster
-Architecture: any
+Architecture: all
 Conflicts: debathena-xcluster-doc (<< 9.4)
 Replaces: debathena-xcluster-doc (<< 9.4)
-Depends: ${shlibs:Depends}, ${misc:Depends}, netbase
+Depends: ${misc:Depends}, netbase, xdg-utils, netcat-openbsd | netcat-traditional, hesiod
 Description: Utilities to display cluster usage status
  The cview and xcluster utilities display MIT maps and Athena cluster 
  locations and current cluster usage statistics.
